--- a/week08/ar-nft.css
+++ b/week08/ar-nft.css
@@ -17,7 +17,7 @@
  				color: white;
  			}
 
-			body {
-				margin : 0px; 
-				overflow: hidden;
-			}
+			//body {
+				//margin : 0px; 
+				//overflow: hidden;
+			//}
